<resources>
    <string name="app_name">NotfallApp</string>
    <string name="name">Name</string>
    <string name="address">Adresse</string>
    <string name="telNr">Telefon Nummer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Benutzername</string>
    <string name="createAccount">Erstelle Benutzer</string>
    <string name="loginbutton">Einloggen</string>
    <string name="alreadyMember">Bereits einen Benutzer? Login</string>
    <string name="noUser">Sie haben noch keinen Benutzer? Registrieren Sie sich!</string>
    <string name="Authenticate">Verifizieren....</string>
    <string name="LoginFailed">Login fehlgeschlagen</string>
    <string name="emailTooShort">Feld für Email und Benutzer darf nicht leer sein!</string>
    <string name="passwordTooShort">Kennwort muss mindestens 4 Zeichen lang sein.</string>
    <string name="Database">alarms.db</string>
    <string name="sos">SOS</string>
    <string name="btnHome">Button Home</string>
    <string name="btnAlarms">Button Alarms</string>
    <string name="btnContact">Button Contact</string>
    <string name="btnSettings">Button Settings</string>
    <string name="noContacts">Sie besitzen leider noch keine Kontakte!</string>
    <string name="contactName">Name</string>
    <string name="contactActive">Aktiv</string>
    <string name="createContact">Glückwunsch! Sie haben erfolgreich einen neuen Kontakt hinzugefügt.</string>
    <string name="updateContact">Ihr Kontakt wurde erfolgreich aktualisiert.</string>
    <string name="deleteContact">Ihr Kontakt wurde erfolgreich gelöscht.</string>
    <string name="createContactFailed">Leider konnte ihr Kontakt nicht erstellt werden.
                                      Grund dafür ist: %1$s</string>
    <string name="updateContactFailed">Ihr Kontakt konnte nicht aktualisiert werden.
                                      Grund dafür ist: %1$s</string>
    <string name="deleteContactFailed">Ihr Kontakt konnte nicht gelöscht werden.
                                      Grund dafür ist: %1$s</string>
    <string name="add">Hinzufügen</string>
    <string name="allowedContacts">Es sind nur höchstens drei Notfallkontakte möglich</string>
    <string name="changeValue">"Daten Ändern"</string>
    <string name="delete">Entfernen</string>
    <string name="activate_deaktivate">"Aktivieren/Deaktivieren"</string>
    <string name="firstnameEmpty">Vorname darf nicht leer sein</string>
    <string name="lastnameEmpty">Nachname darf nicht leer sein!</string>
    <string name="emailEmpty">Email darf nicht leer sein bzw. Email stimmt nicht!</string>
    <string name="numberWrongType">Telefonnummer darf nur Zahlen beinhalten!</string>
    <string name="sureDeactivedContact">Sind Sie sicher, dass Sie den Kontakt deaktivieren möchten? Bei einem Notfall wird dann der Kontakt nicht benachrichtigt!</string>
    <string name="contact_gender">Anrede (*)</string>
    <string name="contact_firstname">Vorname (*)</string>
    <string name="contact_lastname">Nachname (*)</string>
    <string name="contact_email">Email (*)</string>
    <string name="TelNr">Vorwahl (*)</string>
    <string name="contact_telNr">Telefonnummer (*)</string>
    <string name="language">Sprache (*):</string>
    <string name="timezone">Zeitzone (*):</string>
    <string name="message">Wie benachrichtigen? (*):</string>
    <string name="street">Straße</string>
    <string name="housenumber">Hausnummer</string>
    <string name="postcode">Postleitzahl</string>
    <string name="place">Stadt</string>
    <string name="country">Land:</string>
    <string name="phoneAreaCode">Vorwahl (*):</string>
    <string name="noAlarms">Gottseidank besitzen Sie noch keine Alarme!</string>
    <string name="time">Zeitpunkt:</string>
    <string name="AlarmAnswered">Wer nahm an:</string>
    <string name="AlarmAccepted">Derzeit niemand!</string>
    <string name="numberAlarmDatabas">number</string>
    <string name="firstnameAlarmDatabase">firstname</string>
    <string name="lastnameAlarmDatabase">lastname</string>
    <string name="emailAlarmDatabase">email</string>
    <string name="image">image</string>
    <string name="priority">priority</string>
    <string name="active">active</string>
    <string name="prio">prio</string>
    <string name="device">Gerät:</string>
    <string name="date">Datum:</string>
    <string name="ChangeProfil">Ändere Daten</string>
    <string name="cancel">Abbrechen</string>
    <string name="lastname">Nachname</string>
    <string name="firstname">Vorname</string>
    <string name="number">Telefonnummer</string>
    <string name="sureStopCreatingContact">Sind Sie sich sicher, dass Sie, dass bearbeiten von Ihrem
                                            Kontakt beenden wollen?</string>
    <string name="updateProfil">Aktualisieren</string>
    <string name="cancelProfil">Abbrechen</string>
    <string name="BackgroundStartTitle">Hintergrund Start</string>
    <string name="backgroundStart">App im Hintergrund starten?</string>
    <string name="backgroundStartActive">App startet automatisch im Hintergrund</string>
    <string name="nameSettings">name</string>
    <string name="numberSettings">telNr</string>
    <string name="nameNotFilled">Name ist nicht ausgefüllt!</string>
    <string name="noValidnumber">Keine gültige Telefon Nummer eingegeben!</string>
    <string name="noValidemail">Keine gültige E-mail eingegeben!</string>
    <string name="sampleName">Maria Musterfrau</string>
    <string name="sampleNumber">0123456789</string>
    <string name="sampleEmail">maria.musterfrau@mail.com</string>
    <string name="ReadFile">ReadFile</string>
    <string name="ReadFilePath">File Read::---> $1§s</string>
    <string name="logout">Abmelden</string>
    <string name="alarmcalled">Ein Alarm wurde ausgelöst!
                            In Kürze wird ein Alarm an die Zentrale weitergeleitet!</string>
    <string name="alarmcanceled">Der Alarm wurde erfolgreich abgebrochen!</string>
    <string name="alarmcanceledok">OK</string>
    <string name="alarmcalledsuccesful">Ihr Alarm wurde erfolgreich an die Zentrale weitergeleitet!
                                        Hilfe ist unterwegs!</string>
    <string name="alarmFailed">Ihr Alarm konnte leider nicht abgesendet werden, deswegen versuchen wir es nochmals!</string>
    <string name="stopAlarm">Alarm abbrechen!</string>
    <string name="unexpectedErrorLogin">Hoppla anscheinend ist ein Fehler aufgetretten der so nicht passieren sollte!
                                        Bitte verständigen Sie unseren Support!</string>
    <string name="longitude">Längengrad:</string>
    <string name="latitude">Breitengrad:</string>
    <string name="accuracy">Genauigkeit:</string>
    <string name="errorGeoInfo">konnte kein GPS bekommen</string>
    <string name="batterie">Batterie Stand:</string>
    <string name="notConnected">nicht Verbunden</string>
    <string name="connected">Verbunden</string>
    <string name="Imagesaved">Bild gespeichert!</string>
    <string name="Failed">Bild speichern fehlgeschlagen!</string>
    <string name="data">data</string>
    <string name="namePicture">ProfilePicture.jpg</string>
    <string name="PictureType">image/jpeg</string>
    <string name="selectProfilPicture">Wähle ein Profilbild aus</string>
    <string name="saveProfilPicture">Speichern</string>
    <string name="nobraceletconnected">Sie haben kein Armband mit Ihrer App Verbunden</string>
    <string name="braceleteconnected">Ihr Armband wurde erfolgreich verbunden.</string>
    <string name="tryToConnectBracelet">Wir versuchen uns mit Ihrem Armband zu verbinden!
                                        Drücken Sie den Knopf des Armbandes bis es grün blinkt!</string>
    <string name="retrySearching">Erneut suchen</string>
    <string name="sureStopSearching">Sind Sie sich sicher, dass Sie das suchen nach einem Bluetootharmband
                                    beenden wollen?</string>
    <string name="deviceNotSupportBluetooth">Es tut uns schrecklich leid, aber Ihr Geräte unterstützt
                                            kein Bluetooth!</string>
    <string name="nobluetoothdevicesfound">Wir haben leider keine Bluetoothgeräte in Ihrer nähe gefunden.
                                            Bitte versuchen Sie es erneut!</string>
    <string name="braceleterror">Hoppla, da ist wohl etwas schiefgelaufen bitte versuchen Sie es nochmal!</string>
    <string name="connect">Verbinden</string>
    <string name="noDeviceToPair">Hoppla, anscheinend haben Sie noch kein Gerät verbunden.
                                Bitte versuchen sie Ihr Gerät zuverbinden.</string>
    <string name="confirm">Bestätigen</string>
    <string name="Yes">JA</string>
    <string name="No">NEIN</string>
    <string name="noPermission">Fehlende Berechtigungen</string>
    <string name="noPermissionText">Leider konnten wir nicht die notwendigen Berechtigungen von Ihnen erhalten.
                                    Deshalb können Sie die App nur eingeschränkt nutzen!</string>
    <string name="noGPS">Leider benötigen wir GPS damit wir im Falle eines Alarms ihr Position kennen.</string>
    <string name="OK">OK</string>
    <string name="access">Zulassen</string>
    <string name="noInternetAccess">Damit Sie die App Einwandfrei nutzen können benötigen wir
                                    Internetzugang!</string>
    <string name="noBluetooth">Damit Sie die App Einwandfrei nutzen können benötigen wir Bluetooth!</string>
    <string name="notificationTitle">Notfall App</string>
    <string name="alarmWasCalled">Ein Alarm wurde ausgelöst!</string>
    <string name="alarmWasSuccessful">Der Alarm war erfolgreich!</string>
    <string name="alarmWasCanceled">Der Alarm wurde abgebrochen!</string>
    <string name="title_activity_map">Map</string>
    <string name="noInternet">Kein Internet</string>
    <string name="enableInternet">Bitte schalten Sie Internet ein, damit die App funktioniert!</string>
    <string name="noGPSNotificationbar">Kein GPS</string>
    <string name="enableGPS">Bitte schalten Sie GPS ein, damit die App funktioniert!</string>
    <string name="lostConnection">Armband entfernt</string>
    <string name="reconnectBracelet">Wir haben leider die Verbindung zu Ihrem Armband verloren!</string>
    <string name="forbidden">Hoppla anscheinend stimmt Benutzername oder Passwort nicht! </string>
    <string name="internError">Hoppla anscheinend haben wir gerade Probleme mit unserem Server.</string>
    <string name="UserMe">/users/me</string>
    <string name="isSuccess">isSuccess</string>
    <string name="code">code</string>
    <string name="messageServer">message</string>
    <string name="dataServer">data</string>
    <string name="id">ID</string>
    <string name="foreignId">ForeignId</string>
    <string name="title">Title</string>
    <string name="Forename">Forename</string>
    <string name="Surename">Surename</string>
    <string name="usernameServer">Username</string>
    <string name="activeServer">Active</string>
    <string name="roleServer">Role</string>
    <string name="genderServer">Gender</string>
    <string name="photoSetServer">PhotoSet</string>
    <string name="birthdayServer">BirthDay</string>
    <string name="emailAddressServer">EmailAddress</string>
    <string name="phoneFixedServer">PhoneFixed</string>
    <string name="OrgUnitSever">OrgUnit</string>
    <string name="LanguageServer">Language</string>
    <string name="TimezoneServer">Timezone</string>
    <string name="authorizationServer">Authorization</string>
    <string name="userpermission">UserPermission</string>
    <string name="GPSPermissionGranted">All permissions for getting GPS are granted by user!</string>
    <string name="logo">Logo</string>
    <string name="title_activity_settings_test">SettingsTestActivity</string>
    <string name="buttonOk">ButtonOk</string>
</resources>