<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_bar"
    android:layout_width="350dp"
    android:orientation="horizontal"
    android:layout_height="100dp"
    android:background="@color/colorDodgerBlue"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:id="@+id/btnHome"
        android:background="@color/colorDodgerBlue"
        android:src="@drawable/profil"
        android:contentDescription="@string/btnHome" />

    <ImageButton
        android:id="@+id/btnAlarms"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/colorDodgerBlue"
        android:src="@drawable/device"
        android:contentDescription="@string/btnAlarms" />

    <ImageButton
        android:id="@+id/btnContact"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/colorDodgerBlue"
        android:src="@drawable/contacts"
        android:contentDescription="@string/btnContact" />

    <ImageButton
        android:id="@+id/btnMap"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/colorDodgerBlue"
        android:src="@drawable/map"
        android:contentDescription="@string/btnMap"/>

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@color/colorDodgerBlue"
        android:src="@drawable/settings"
        android:contentDescription="@string/btnSettings" />
</LinearLayout>