<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
    >

    <include
        layout="@layout/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <ImageButton
        android:id="@+id/addpicture"
        android:layout_width="132dp"
        android:layout_height="119dp"
        android:layout_below="@+id/button_bar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/addprofilepicture" />

    <EditText
        android:id="@+id/input_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addpicture"
        android:hint="@string/firstname"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_firstname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:hint="@string/lastname"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_lastname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="2dp"
        android:hint="@string/number"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:padding="12dp"
        android:text="@string/add" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="23dp"
        android:padding="12dp"
        android:text="@string/cancel" />

    <include
        layout="@layout/layout_button_sos"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/btn_cancel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="5dp" />

</RelativeLayout>