<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:layout_marginBottom="10dp"
                android:textSize="10pt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:layout_marginBottom="10dp"
                android:textSize="10pt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Tel-Nr Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/input_telnr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/telNr"
                android:inputType="textPhonetic"
                android:layout_marginBottom="10dp"
                android:textSize="10pt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:textSize="10pt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Update Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_updateProfil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:padding="12dp"
            android:text="@string/updateProfil"
            android:textSize="8pt"/>

        <!-- Cancel Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancelProfil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:padding="12dp"
            android:text="@string/cancelProfil"
            android:textSize="8pt"/>


    </LinearLayout>
</ScrollView>